# SoundDevice

./: .gitignore  exclude  to_My_Projects_LEMP.ffs_gui
EndPoint/: .gitignore
EndPoint/Documentation/: IC selection.odt  Inductance.txt  Inductance_2.txt  Sound_device_endpoint_sitara.vsd
EndPoint/MicroChip/: .gitignore
EndPoint/MicroChip/DTS/linux_dts/: Makefile  (+6 more)
EndPoint/MicroChip/Modules/: BUILD
EndPoint/MicroChip/RESERVE/: .config.linux.reserve  .gitignore
EndPoint/MicroChip/SAM-BA/: READ_FUSE_JTAG.qml  READ_FUSE_JTAG.qmlc  SAMA5D27_QSPI_JTAG.qml  SAMA5D27_QSPI_JTAG.qmlc  SAMA5D27_QSPI_USB.qml  SAMA5D27_QSPI_USB.qmlc  SHOW_BOOT_JTAG.qml  SHOW_BOOT_JTAG.qmlc  SHOW_BOOT_USB.qml  sama5d2-fuse.jsc  sama5d27_sound_device.dtb  zImage
EndPoint/MicroChip/at91bootstrap/: .cproject  .project  main.c
EndPoint/MicroChip/workspace/Hello_Yocto/: .autotools  .cproject  .gdbinit  .project  INSTALL  Makefile  Makefile.in  README  arm-poky-linux-gnueabi-libtool  config.h  config.status  configure  configure.ac
EndPoint/MicroChip/workspace/Hello_Yocto/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
EndPoint/MicroChip/workspace/Hello_Yocto/src/: Hello_Yocto  Hello_Yocto.c  Makefile  Makefile.am  Makefile.in
EndPoint/MicroChip/workspace/Hello_Yocto/src/.deps/: Hello_Yocto-Hello_Yocto.Po
EndPoint/TI/: .gitignore
EndPoint/TI/am335x/: .gitignore  boot.scr  bootcmd
EndPoint/TI/am57x/: .gitignore  boot.scr  bootcmd
EndPoint/TI/ccs_workspace/: .gitignore
EndPoint/TI/workspace/: .gitignore
RTP_test_x86/RTP_test/: RTP_test.pro  main.cpp  main.h
(+1145 files in other folders)
